# ghosttown_mcp

./: .gitignore  Dockerfile  Dockerfile.fastmcp  Dockerfile.jsonprc  Dockerfile.jsonrpc  README.md  pyproject.toml
examples/: agent_fastmcp.py  agent_http_mcp.py  mcp_sync_client.py  raw_client.py  sdk_client.py
src/ghosttown_mcp/: __init__.py
src/ghosttown_mcp/clients/: __init__.py  mcp_http_client.py  mcp_sync_client.py
src/ghosttown_mcp/server/: __init__.py  main.py
src/ghosttown_mcp/server/fastmcp/: __init__.py  server.py
src/ghosttown_mcp/server/jsonrpc/: __init__.py  server.py
src/ghosttown_mcp/tools/: __init__.py  addition.py
tests/: __init__.py  test_add.py
